--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "client": "cd client && yarn start",
-    "server": "nodemon server.js",
+    "server": "node server.js",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   }
