--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "node server.js",
+    "server-dev":"nodemon server.js",
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "dev": "concurrently --kill-others-on-fail \"yarn server-dev\" \"yarn client\""
   }
 }
