--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
     "request": "^2.83.0",
-    "webpack": "^3.11.0"
-    
+    "webpack": "^3.11.0",
+    "concurrently": "^3.5.0"
   },
   "devDependencies": {
-    "concurrently": "^3.5.0",
+ 
     "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
