--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
     "request": "^2.83.0",
-    "webpack": "^3.11.0",
-    "concurrently": "^3.5.0"
+    "webpack": "^3.11.0"
   },
   "devDependencies": {
- 
+    "concurrently": "^3.5.0",
     "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
     "client": "cd client && yarn start",
     "server": "node server.js",
     "server-dev":"nodemon server.js",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "postinstall":"cd client && yarn install",
+    "start": "npm run server && npm run client",
     "dev": "concurrently --kill-others-on-fail \"yarn server-dev\" \"yarn client\""
   }
 }
