--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
+    "eslint": "^4.18.0",
+    "eslint-plugin-react": "^7.6.1",
     "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
     "client": "cd client && yarn start",
     "server": "node server.js",
-    "server-dev":"nodemon server.js",
-    "postinstall":"cd client && yarn install",
+    "server-dev": "nodemon server.js",
+    "postinstall": "cd client && yarn install",
     "start": "npm run server && npm run client",
     "dev": "concurrently --kill-others-on-fail \"yarn server-dev\" \"yarn client\""
   }
