--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
     "mongoose": "^4.13.10",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
@@ -15,15 +20,19 @@
     "webpack": "^3.11.0"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "concurrently": "^3.5.0",
-    "eslint": "^4.18.0",
-    "eslint-plugin-react": "^7.6.1",
+    "eslint": "3.x",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
     "client": "cd client && yarn start",
     "server": "node server.js",
-    "server-dev": "nodemon server.js",
+    "server-dev": "node server.js",
     "postinstall": "cd client && yarn install",
     "start": "npm run server && npm run client",
     "dev": "concurrently --kill-others-on-fail \"yarn server-dev\" \"yarn client\""
