--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongoose": "^4.13.10",
     "morgan": "^1.9.0",
     "react": "^16.2.0",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
     "request": "^2.83.0",
@@ -21,8 +22,8 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "node server.js",
-    "server-dev":"nodemon server.js",
-    "postinstall":"cd client && yarn install",
+    "server-dev": "nodemon server.js",
+    "postinstall": "cd client && yarn install",
     "start": "npm run server && npm run client",
     "dev": "concurrently --kill-others-on-fail \"yarn server-dev\" \"yarn client\""
   }
