--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^4.13.10",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0",
+    "prop-types": "^15.6.1",
     "request": "^2.83.0",
+    "validator": "^9.4.1",
     "webpack": "^3.11.0"
   },
   "devDependencies": {
