--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "axios": "^0.16.2",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.1",
-    "jsonwebtoken": "^8.1.1",
+    "jsonwebtoken": "^8.2.0",
     "mongoose": "^4.13.10",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-google-oauth20": "^1.0.0",
+    "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "prop-types": "^15.6.1",
     "request": "^2.83.0",
@@ -32,7 +34,7 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "node server.js",
-    "server-dev": "node server.js",
+    "server-dev": "nodemon server.js",
     "postinstall": "cd client && yarn install",
     "start": "npm run server && npm run client",
     "dev": "concurrently --kill-others-on-fail \"yarn server-dev\" \"yarn client\""
