--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "react": "^16.2.0",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "request": "^2.83.0",
     "webpack": "^3.11.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
+    "file-loader": "^1.1.11",
+    "url-loader": "^0.6.2",
     "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
