--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,11 @@
     "axios": "^0.17.1",
     "history": "^4.7.2",
     "material-ui": "^0.20.0",
+    "materialize-css": "^0.100.2",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-tap-event-plugin": "^3.0.2"
