--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
-    "express": "^4.16.1",
+    "express": "^4.16.2",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^4.13.10",
     "morgan": "^1.9.0",
@@ -23,12 +26,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "concurrently": "^3.5.0",
+    "babel-register": "^6.26.0",
+    "concurrently": "^3.5.1",
     "eslint": "4.x",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "nodemon": "^1.17.1",
     "prettier-eslint": "^8.8.1",
     "webpack-dev-server": "^2.11.1"
   },
@@ -37,7 +42,7 @@
     "server": "node server.js",
     "server-dev": "nodemon server.js",
     "postinstall": "cd client && yarn install",
-    "start": "npm run server && npm run client",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "dev": "concurrently --kill-others-on-fail \"yarn server-dev\" \"yarn client\""
   }
 }
