--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "server": "node server.js",
     "server-dev": "nodemon server.js",
     "postinstall": "cd client && yarn install",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "concurrently \"cd client && yarn build\" \"npm run server\" \"npm run client\"",
     "dev": "concurrently --kill-others-on-fail \"yarn server-dev\" \"yarn client\""
   }
 }
