--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "prop-types": "^15.6.1",
     "request": "^2.83.0",
     "validator": "^9.4.1",
