--- a/package.json
+++ b/package.json
@@ -45,14 +45,10 @@
     "file-loader": "^0.11.1",
     "node-sass": "^4.5.2",
     "nodemon": "^1.17.1",
-    "prettier-eslint": "^8.8.1",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.11.1"
+    "prettier-eslint": "^8.8.1"
   },
   "scripts": {
-    "start": "nodemon -r dotenv/config -r babel-register server.js",
+    "start": "npm run server && npm run client",
     "start:prod": "node -r dotenv/config -r build/server.js",
     "client": "cd client && yarn start",
     "server": "node server.js",
